--- a/style.css
+++ b/style.css
@@ -1,10 +1,301 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap");
 
-
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap");
 
 /* font-family: "Inter", sans-serif; */
 
-body{
-    font-family: "Merriweather", serif;
+* {
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
+
+body {
+  font-family: "Merriweather", serif;
+}
+
+/* banner styles start here  */
+
+.banner_container {
+    max-width: 1320px;
+    height: 600px;
+    margin: 0 auto;
+    margin-top: 50px;
+    /* border:2px solid red; */
+    background-image: url("./images/Banner Image.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: rgb(0, 0 , 0, 0.5);
+    background-blend-mode: overlay;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 16px;
+  }
+  
+  
+
+.banner_div {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 632px;
+}
+
+.banner_para {
+  /* Font: Merriweather
+Font weight: 400
+Font size: 32pxpx
+Row height: 40px
+Letter spacing: 0%
+Align: Align center */
+
+  font-family: "Merriweather", serif;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 40px;
+  letter-spacing: 0;
+  text-align: center;
+}
+
+
+.banner_heading{
+    /* Font: Merriweather
+Font weight: 900
+Font size: 72pxpx
+Row height: 95px
+Letter spacing: 0%
+Align: Align center */
+
+font-family: "Merriweather", serif;
+font-weight: 900;
+font-size: 72px;
+line-height: 95px;
+text-align: center;
+
+}
+
+/* discount section start */
+.discount_section{
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+
+.discount_heading{
+    color: rgb(255, 0, 0);
+font-family: Inter;
+font-size: 88px;
+font-weight: 700;
+line-height: 107px;
+letter-spacing: 0%;
+text-align: center;
+}
+
+.discount_para{
+    color: rgb(255, 0, 0);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 29px;
+    letter-spacing: 0%;
+    text-align: center;
+    /* margin-top: 45px; */
+}
+
+.discount_headong_2{
+    color: rgb(7, 2, 17);
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 58px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+.discount_div{
+    max-width: 802px;
+    height: 806px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.discount_image_div{
+    width: 802px;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.discount_image{
+    width: 802px;
+    height: 500px;
+    align-items: center;
+}
+
+/* party section start */
+
+.party_heading{
+ 
+    color: rgb(255, 255, 255);
+    font-family: Merriweather;
+    font-size: 64px;
+    font-weight: 900;
+    line-height: 88px;
+    letter-spacing: 11%;
+    text-align: left;
+}
+
+
+.party_image{
+
+}
+
+.party_image_div{
+
+}
+
+.party_heading_2{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: 0%;
+    text-align: start;
+    margin-left: 32px;
+    text-transform: uppercase;
+}
+
+.party_para_1{
+    color: rgba(255, 255, 255, 0.8);
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    letter-spacing: 0%;
+    text-align: left;
+}
+
+
+
+.party_content{
+width: 642px;
+display: flex;
+flex-direction: column;
+gap: 30px;
+}
+
+.party{
+   
+  max-width: 1320px;
+  height: 600px;
+  
+  background-image: url('./images/Vectorrr.png'), linear-gradient(90.00deg, rgb(7, 2, 17),rgba(7, 2, 17, 0) 100%);
+ 
+  background-blend-mode: overlay;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 0 auto;
+ border-radius: 16px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+}
+
+
+
+/* address section start */
+.address{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 1320px;
+    height: 480px;
+    /* border: 2px solid red;   */
+    margin: 0 auto;
+    margin-top: 120px;
+    border-radius: 16px;
+
+    background: linear-gradient(180.00deg, rgba(255, 0, 0, 0.1),rgba(255, 0, 0, 0) 120px);
+   
+}
+.address_div{
+  
+    width: 549px;
+    height: 277px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 48px;
+  
+}
+
+.heading_div{
+    width: 560px;
+    height: 168px;
+   
+   
+}
+
+.address_span{
+    font-family: Inter;
+font-size: 32px;
+font-weight: 600;
+line-height: 56px;
+letter-spacing: 0%;
+text-align: center;
+text-transform: capitalize;
+color: red;
+}
+
+.address_heading{
+    font-family: "Inter", sans-serif; 
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 56px;
+    letter-spacing: 0%;
+    text-align: center;
+    text-transform: capitalize;
+    color: black;
+}
+
+
+.address_btn{
+    /* Frame 1 */
+position: relative;
+width: 167px;
+height: 56px;
+/* Auto layout */
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 16px 32px 16px 32px;
+
+border-radius: 8px;
+
+background: rgb(255, 0, 0);
+
+color: rgb(255, 255, 255);
+font-family: "Inter", sans-serif; 
+font-size: 20px;
+font-weight: 700;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: center;
+text-transform: uppercase;
+border: none;
+
 }
