--- a/style.css
+++ b/style.css
@@ -17,25 +17,23 @@ body {
 /* banner styles start here  */
 
 .banner_container {
-    max-width: 1320px;
-    height: 600px;
-    margin: 0 auto;
-    margin-top: 50px;
-    /* border:2px solid red; */
-    background-image: url("./images/Banner Image.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: rgb(0, 0 , 0, 0.5);
-    background-blend-mode: overlay;
+  max-width: 1320px;
+  height: 600px;
+  margin: 0 auto;
+  margin-top: 50px;
+  /* border:2px solid red; */
+  background-image: url("./images/Banner Image.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: rgb(0, 0, 0, 0.5);
+  background-blend-mode: overlay;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 16px;
-  }
-  
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 16px;
+}
 
 .banner_div {
   color: white;
@@ -62,240 +60,329 @@ Align: Align center */
   text-align: center;
 }
 
-
-.banner_heading{
-    /* Font: Merriweather
+.banner_heading {
+  /* Font: Merriweather
 Font weight: 900
 Font size: 72pxpx
 Row height: 95px
 Letter spacing: 0%
 Align: Align center */
 
-font-family: "Merriweather", serif;
-font-weight: 900;
-font-size: 72px;
-line-height: 95px;
-text-align: center;
-
+  font-family: "Merriweather", serif;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 95px;
+  text-align: center;
 }
 
 /* discount section start */
-.discount_section{
-    display: flex;
-    /* flex-direction: column; */
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
+.discount_section {
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
 }
 
-.discount_heading{
-    color: rgb(255, 0, 0);
-font-family: Inter;
-font-size: 88px;
-font-weight: 700;
-line-height: 107px;
-letter-spacing: 0%;
-text-align: center;
+.discount_heading {
+  color: rgb(255, 0, 0);
+  font-family: Inter;
+  font-size: 88px;
+  font-weight: 700;
+  line-height: 107px;
+  letter-spacing: 0%;
+  text-align: center;
 }
 
-.discount_para{
-    color: rgb(255, 0, 0);
-    font-family: Inter;
-    font-size: 24px;
-    font-weight: 500;
-    line-height: 29px;
-    letter-spacing: 0%;
-    text-align: center;
-    /* margin-top: 45px; */
+.discount_para {
+  color: rgb(255, 0, 0);
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 29px;
+  letter-spacing: 0%;
+  text-align: center;
+  /* margin-top: 45px; */
 }
 
-.discount_headong_2{
-    color: rgb(7, 2, 17);
-    font-family: Inter;
-    font-size: 48px;
-    font-weight: 700;
-    line-height: 58px;
-    letter-spacing: 0%;
-    text-align: center;
+.discount_headong_2 {
+  color: rgb(7, 2, 17);
+  font-family: Inter;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 58px;
+  letter-spacing: 0%;
+  text-align: center;
 }
-.discount_div{
-    max-width: 802px;
-    height: 806px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.discount_image_div{
-    width: 802px;
-    height: 500px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.discount_div {
+  max-width: 802px;
+  height: 806px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.discount_image{
-    width: 802px;
-    height: 500px;
-    align-items: center;
+.discount_image_div {
+  width: 802px;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.discount_image {
+  width: 802px;
+  height: 500px;
+  align-items: center;
 }
 
 /* party section start */
 
-.party_heading{
- 
-    color: rgb(255, 255, 255);
-    font-family: Merriweather;
-    font-size: 64px;
-    font-weight: 900;
-    line-height: 88px;
-    letter-spacing: 11%;
-    text-align: left;
+.party_heading {
+  color: rgb(255, 255, 255);
+  font-family: Merriweather;
+  font-size: 64px;
+  font-weight: 900;
+  line-height: 88px;
+  letter-spacing: 11%;
+  text-align: left;
 }
 
-
-.party_image{
-
+.party_image {
 }
 
-.party_image_div{
-
+.party_image_div {
 }
 
-.party_heading_2{
-    color: rgb(255, 255, 255);
-    font-family: Inter;
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 24px;
-    letter-spacing: 0%;
-    text-align: start;
-    margin-left: 32px;
-    text-transform: uppercase;
+.party_heading_2 {
+  color: rgb(255, 255, 255);
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0%;
+  text-align: start;
+  margin-left: 32px;
+  text-transform: uppercase;
 }
 
-.party_para_1{
-    color: rgba(255, 255, 255, 0.8);
-    font-family: Inter;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 30px;
-    letter-spacing: 0%;
-    text-align: left;
+.party_para_1 {
+  color: rgba(255, 255, 255, 0.8);
+  font-family: Inter;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0%;
+  text-align: left;
 }
 
-
-
-.party_content{
-width: 642px;
-display: flex;
-flex-direction: column;
-gap: 30px;
+.party_content {
+  width: 642px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 
-.party{
-   
+.party {
   max-width: 1320px;
   height: 600px;
-  
-  background-image: url('./images/Vectorrr.png'), linear-gradient(90.00deg, rgb(7, 2, 17),rgba(7, 2, 17, 0) 100%);
- 
+
+  background-image: url("./images/Vectorrr.png"),
+    linear-gradient(90deg, rgb(7, 2, 17), rgba(7, 2, 17, 0) 100%);
+
   background-blend-mode: overlay;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   margin: 0 auto;
- border-radius: 16px;
+  border-radius: 16px;
   display: flex;
   justify-content: space-around;
   align-items: center;
-
 }
-
-
 
 /* address section start */
-.address{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 1320px;
-    height: 480px;
-    /* border: 2px solid red;   */
-    margin: 0 auto;
-    margin-top: 120px;
-    border-radius: 16px;
+.address {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 1320px;
+  height: 480px;
+  /* border: 2px solid red;   */
+  margin: 0 auto;
+  margin-top: 120px;
+  border-radius: 16px;
 
-    background: linear-gradient(180.00deg, rgba(255, 0, 0, 0.1),rgba(255, 0, 0, 0) 120px);
-   
+  background: linear-gradient(
+    180deg,
+    rgba(255, 0, 0, 0.1),
+    rgba(255, 0, 0, 0) 120px
+  );
 }
-.address_div{
-  
-    width: 549px;
-    height: 277px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 48px;
-  
-}
-
-.heading_div{
-    width: 560px;
-    height: 168px;
-   
-   
+.address_div {
+  width: 549px;
+  height: 277px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 48px;
 }
 
-.address_span{
-    font-family: Inter;
-font-size: 32px;
-font-weight: 600;
-line-height: 56px;
-letter-spacing: 0%;
-text-align: center;
-text-transform: capitalize;
-color: red;
+.heading_div {
+  width: 560px;
+  height: 168px;
 }
 
-.address_heading{
-    font-family: "Inter", sans-serif; 
-    font-size: 32px;
-    font-weight: 600;
-    line-height: 56px;
-    letter-spacing: 0%;
-    text-align: center;
-    text-transform: capitalize;
-    color: black;
+.address_span {
+  font-family: Inter;
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 56px;
+  letter-spacing: 0%;
+  text-align: center;
+  text-transform: capitalize;
+  color: red;
 }
 
+.address_heading {
+  font-family: "Inter", sans-serif;
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 56px;
+  letter-spacing: 0%;
+  text-align: center;
+  text-transform: capitalize;
+  color: black;
+}
 
-.address_btn{
-    /* Frame 1 */
-position: relative;
-width: 167px;
-height: 56px;
-/* Auto layout */
-display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
-padding: 16px 32px 16px 32px;
+.address_btn {
+  /* Frame 1 */
+  position: relative;
+  width: 167px;
+  height: 56px;
+  /* Auto layout */
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 32px 16px 32px;
 
-border-radius: 8px;
+  border-radius: 8px;
 
-background: rgb(255, 0, 0);
+  background: rgb(255, 0, 0);
 
-color: rgb(255, 255, 255);
-font-family: "Inter", sans-serif; 
-font-size: 20px;
-font-weight: 700;
-line-height: 24px;
-letter-spacing: 0%;
-text-align: center;
-text-transform: uppercase;
-border: none;
+  color: rgb(255, 255, 255);
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0%;
+  text-align: center;
+  text-transform: uppercase;
+  border: none;
+}
 
+/* offer year design start  */
+
+.best_offer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 1320px;
+  height: 463px;
+
+  margin: 0px auto;
+}
+
+.offer_content {
+  width: 393px;
+  height: 255px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 30px;
+}
+
+.offer_content_para {
+  color: rgb(255, 0, 0);
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 29px;
+  letter-spacing: 0%;
+  text-align: center;
+}
+
+.offer_content_heading {
+  color: rgb(7, 2, 17);
+  font-family: "Merriweather", serif;
+  font-size: 48px;
+  font-weight: 900;
+  line-height: 60px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-transform: capitalize;
+}
+
+.offer_content_para_2 {
+  color: rgba(7, 2, 17, 0.6);
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: 0%;
+  text-align: left;
+}
+
+.offer_year {
+  display: flex;
+  flex-direction: column;
+  width: 276px;
+  justify-content: center;
+  align-items: start;
+  gap: 30px;
+}
+
+.offer_year_para {
+  text-align: start;
+}
+
+.offer_image_div {
+  width: 463px;
+  height: 463px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  /* box-sizing: border-box; */
+  border: 15px solid rgb(255, 0, 0);
+
+  border-radius: 50%;
+}
+
+.image_first {
+  width: 364.84px;
+  height: 364.84px;
+}
+
+.offer_year_heading {
+  color: rgb(255, 0, 0);
+  font-family: "Inter", sans-serif;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 58px;
+  letter-spacing: 0%;
+  text-align: left;
+}
+
+.offer_year_para {
+  color: rgba(7, 2, 17, 0.6);
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: 0%;
+  text-align: left;
 }
