--- a/style.css
+++ b/style.css
@@ -475,3 +475,66 @@ height: 450.96px;
 height: 206.84px;
 }
 
+
+.portfolio{
+  width: 1320px;
+height: 1163px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items:start ;
+margin: 0 auto;
+gap: 30px;
+margin-top: 120px;
+
+
+}
+
+.portfolio_content_div{
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 20px;
+  width: 896px;
+}
+
+.portfolio_image_div{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 24px; /* Adjust the gap between images as needed */
+
+
+}
+
+.portfolio_image_div{
+  /* width: 424px;
+  height: 450px; */
+}
+
+
+.portfolio_para_1{
+  color: rgb(255, 0, 0);
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+line-height: 29px;
+
+}
+
+.portfolio_heading{
+  color: rgb(7, 2, 17);
+  font-family: Merriweather;
+  font-size: 48px;
+  font-weight: 900;
+  line-height: 60px;
+ 
+  text-transform: capitalize;
+}
+
+.portfolio_para_2{
+  color: rgba(7, 2, 17, 0.6);
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 32px;
+}
