--- a/style.css
+++ b/style.css
@@ -538,3 +538,78 @@ line-height: 29px;
   font-weight: 400;
   line-height: 32px;
 }
+
+.subscribe{
+  width: 1320px;
+height: 616px;
+  border-radius: 16px;
+
+background: rgba(255, 0, 0, 0.05);
+margin: 0 auto;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+gap: 22px;
+
+margin-top: 120px;
+}
+.port_img_div img{
+
+width: 150px;
+height: 150px;
+ 
+}
+.subscribe h2{
+  color: rgb(7, 2, 17);
+  font-family: Merriweather;
+  font-size: 48px;
+  font-weight: 900;
+  line-height: 60px;
+  letter-spacing: 0%;
+  text-align: center;
+ 
+}
+.subscribe p{
+  color: rgba(7, 2, 17, 0.6);
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: 0%;
+  text-align: center;
+  width: 896px;
+/* height: 336px; */
+}
+.input_div{
+  display: flex;
+  justify-content: center;
+}
+.input_div button{
+  width: 210px;
+  height: 72px;
+  border-radius: 0px 50px 50px 0px;
+
+background: rgb(255, 0, 0);
+color: rgb(255, 255, 255);
+font-family: Inter;
+font-size: 20px;
+font-weight: 600;
+line-height: 24px;
+letter-spacing: 0%;
+text-align: center;
+text-transform: capitalize;
+border: none;
+}
+
+
+.input_div input{
+
+width: 648px;
+height: 72px;
+border-top-left-radius: 50px;
+border-bottom-left-radius: 50px;
+
+background: rgb(255, 255, 255);
+border: none;
+}
